--- a/app/src/main/res/layout/attendee_event_details.xml
+++ b/app/src/main/res/layout/attendee_event_details.xml
@@ -4,60 +4,20 @@
     android:layout_height="match_parent"
     android:id="@+id/EventDetailsPage">
 
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/TitleRow">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/event_det"
-            android:id="@+id/eventdetails"
-            android:layout_column="0"
-            android:textAlignment="center"
-            android:layout_weight="5"
-            android:padding="5dp" />
-
-    </TableRow>
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/PictureRow">
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="118dp"
-            android:id="@+id/eventpic"
-            android:textAlignment="center"
-            android:contentDescription="@string/event_pic"
-            android:src="#000000"
-            android:padding="5dp"
-            android:layout_column="0"
-            android:layout_span="2" />
-    </TableRow>
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/NameRow">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/event_name"
-            android:padding="5dp"
-            android:textAlignment="center"
-            android:id="@+id/eventname"
-            android:textColor="#000000"
-            android:textSize="22sp"
-            android:layout_column="0"
-            android:layout_span="2" />
-
-    </TableRow>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/event_name"
+        android:padding="5dp"
+        android:textAlignment="center"
+        android:id="@+id/eventname"
+        android:textColor="#000000"
+        android:textSize="40sp"
+        android:layout_column="0"
+        android:layout_span="0"
+        android:layout_marginLeft="10dp"
+        android:gravity="center_horizontal" />
 
     <View
         android:layout_height="1dp"
@@ -72,7 +32,8 @@
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/DateRow">
+        android:id="@+id/DateRow"
+        android:paddingEnd="0dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -82,7 +43,8 @@
             android:id="@+id/date_label"
             android:layout_column="0"
             android:layout_marginLeft="10dp"
-            android:layout_weight="0" />
+            android:layout_weight="0"
+            android:layout_span="0" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -91,8 +53,9 @@
             android:text="@string/event_date"
             android:id="@+id/event_date"
             android:textColor="#000000"
-            android:layout_column="1"
-            android:maxWidth="240dp" />
+            android:maxWidth="240dp"
+            android:layout_marginLeft="10dp"
+            android:layout_column="1" />
 
     </TableRow>
 
@@ -117,10 +80,10 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/event_time"
             android:id="@+id/event_time"
-            android:layout_column="1"
             android:textColor="#000000"
             android:layout_marginTop="5dp"
-            android:maxWidth="240dp" />
+            android:maxWidth="240dp"
+            android:layout_marginLeft="10dp" />
     </TableRow>
 
     <TableRow
@@ -144,10 +107,10 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/event_location"
             android:id="@+id/event_location"
-            android:layout_column="1"
             android:layout_marginTop="5dp"
             android:textColor="#000000"
-            android:maxWidth="240dp" />
+            android:maxWidth="240dp"
+            android:layout_marginLeft="10dp" />
 
     </TableRow>
 
@@ -172,10 +135,10 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/event_host"
             android:id="@+id/event_host"
-            android:layout_column="1"
             android:layout_marginTop="5dp"
             android:textColor="#000000"
-            android:maxWidth="240dp" />
+            android:maxWidth="240dp"
+            android:layout_marginLeft="10dp" />
     </TableRow>
 
     <TableRow
@@ -199,14 +162,14 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/event_genre"
             android:id="@+id/event_genre"
-            android:layout_column="1"
             android:layout_marginTop="5dp"
             android:textColor="#000000"
-            android:maxWidth="240dp" />
+            android:maxWidth="240dp"
+            android:layout_marginLeft="10dp" />
     </TableRow>
 
     <TableRow
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:id="@+id/DescriptionRow">
 
@@ -226,10 +189,10 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/event_description"
             android:id="@+id/event_description"
-            android:layout_column="1"
             android:layout_marginTop="5dp"
             android:textColor="#000000"
-            android:maxWidth="240dp" />
+            android:maxWidth="240dp"
+            android:layout_marginLeft="10dp" />
 
     </TableRow>
 
@@ -254,10 +217,10 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/event_restriction"
             android:id="@+id/event_restriction"
-            android:layout_column="1"
             android:layout_marginTop="5dp"
             android:textColor="#000000"
-            android:maxWidth="240dp" />
+            android:maxWidth="240dp"
+            android:layout_marginLeft="10dp" />
     </TableRow>
 
 </TableLayout>
