--- a/app/src/main/res/layout/findevents.xml
+++ b/app/src/main/res/layout/findevents.xml
@@ -43,55 +43,13 @@
             android:textStyle="normal|bold"
             android:gravity="top|center_horizontal" />
 
-        <LinearLayout
-            android:orientation="horizontal"
+        <ListView
             android:layout_width="match_parent"
-            android:layout_height="60dp">
-
-            <TextView
-                android:layout_width="80dp"
-                android:layout_height="match_parent"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="01 Jan 2014"
-                android:id="@+id/textView2"
-                android:layout_gravity="left"
-                android:gravity="center_horizontal" />
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="The Great EVENT"
-                android:id="@+id/textView3"
-                android:gravity="center_horizontal" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="60dp" >
-
-            <TextView
-                android:layout_width="80dp"
-                android:layout_height="match_parent"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="01 Jan 2014"
-                android:id="@+id/textView6"
-                android:layout_gravity="left"
-                android:gravity="center_horizontal" />
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="The Great EVENT"
-                android:id="@+id/textView7"
-                android:gravity="center_horizontal"
-                android:shadowColor="#ffffff"
-                android:background="#ffffff" />
-        </LinearLayout>
+            android:layout_height="match_parent"
+            android:id="@+id/ThisWeek" />
 
     </LinearLayout>
+
 
     <LinearLayout
         android:orientation="vertical"
@@ -109,51 +67,11 @@
             android:textStyle="normal|bold"
             android:gravity="top|center_horizontal" />
 
-        <LinearLayout
-            android:orientation="horizontal"
+        <ListView
             android:layout_width="match_parent"
-            android:layout_height="60dp" >
+            android:layout_height="match_parent"
+            android:id="@+id/RecommendedEvents" />
 
-            <TextView
-                android:layout_width="80dp"
-                android:layout_height="match_parent"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="01 Jan 2014"
-                android:id="@+id/textView8"
-                android:layout_gravity="left"
-                android:gravity="center_horizontal" />
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="The Great EVENT"
-                android:id="@+id/textView9"
-                android:gravity="center_horizontal" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="60dp" >
-
-            <TextView
-                android:layout_width="80dp"
-                android:layout_height="match_parent"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="01 Jan 2014"
-                android:id="@+id/textView10"
-                android:layout_gravity="left"
-                android:gravity="center_horizontal" />
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="The Great EVENT"
-                android:id="@+id/textView11"
-                android:gravity="center_horizontal" />
-        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -172,51 +90,11 @@
             android:textStyle="normal|bold"
             android:gravity="top|center_horizontal" />
 
-        <LinearLayout
-            android:orientation="horizontal"
+        <ListView
             android:layout_width="match_parent"
-            android:layout_height="60dp" >
+            android:layout_height="match_parent"
+            android:id="@+id/PopularEvents" />
 
-            <TextView
-                android:layout_width="80dp"
-                android:layout_height="match_parent"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="01 Jan 2014"
-                android:id="@+id/textView12"
-                android:layout_gravity="left"
-                android:gravity="center_horizontal" />
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="The Great EVENT"
-                android:id="@+id/textView13"
-                android:gravity="center_horizontal" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="60dp" >
-
-            <TextView
-                android:layout_width="80dp"
-                android:layout_height="match_parent"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="01 Jan 2014"
-                android:id="@+id/textView14"
-                android:layout_gravity="left"
-                android:gravity="center_horizontal" />
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="The Great EVENT"
-                android:id="@+id/textView15"
-                android:gravity="center_horizontal" />
-        </LinearLayout>
     </LinearLayout>
 
 </GridLayout>
