--- a/app/src/main/res/layout/findevents.xml
+++ b/app/src/main/res/layout/findevents.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.LinearLayoutCompat
+    <!--android.support.v7.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -26,7 +26,7 @@
             android:onClick="button_Click"
             android:id="@+id/buttonMyEvents"
             android:layout_weight="1"/>
-    </android.support.v7.widget.LinearLayoutCompat>
+    </android.support.v7.widget.LinearLayoutCompat-->
         <!--Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -41,15 +41,16 @@
     <android.support.v7.widget.LinearLayoutCompat
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="524dp"
+        android:layout_height="wrap_content"
         android:layout_row="1"
         android:layout_column="0">
 
         <android.support.v7.widget.AppCompatTextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
-            android:text="@string/upcomingEvents"
+            android:text="All Upcoming Events"
             android:id="@+id/textView"
             android:textStyle="normal|bold"
             android:gravity="top|center_horizontal" />
@@ -61,7 +62,7 @@
 
         <ListView
             android:layout_width="match_parent"
-            android:layout_height="488dp"
+            android:layout_height="wrap_content"
             android:id="@+id/AllEvents" />
 
     </android.support.v7.widget.LinearLayoutCompat>
